<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/card_center_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/card_center_horizontal_margin"
    android:background="@drawable/bg"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cv_settings_langue"
        android:layout_alignParentTop="true"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_center_horizontal_margin"
        >
        <LinearLayout
            android:layout_marginTop="@dimen/card_center_horizontal_margin"
            android:layout_marginBottom="@dimen/card_center_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_marginTop="@dimen/card_center_horizontal_margin"
                android:layout_marginRight="@dimen/card_center_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <ImageButton
                    android:layout_centerInParent="true"
                    android:id="@+id/ibtn_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    android:background="@android:color/transparent"

                    />
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_detail"
                    android:textColor="@color/blue_dark"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/ibtn_language"
                    android:text="English"
                    android:textColor="@color/blue_dark"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView

        android:id="@+id/cv_settings_video"
        android:layout_below="@+id/cv_settings_langue"
        android:layout_above="@+id/cv_settings_advanced"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_marginTop="@dimen/card_center_horizontal_margin"
            android:layout_marginBottom="@dimen/card_center_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/card_center_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ibtn_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    android:background="@android:color/transparent"

                    />
                <TextView
                    android:layout_toLeftOf="@+id/ibtn_quality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quality"
                    android:textColor="@color/blue_dark"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/card_center_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/swSound"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    />
                <TextView
                    android:layout_toLeftOf="@+id/swSound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound"
                    android:textColor="@color/blue_dark"
                    />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_settings_advanced"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/card_center_horizontal_margin"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_marginTop="@dimen/card_center_horizontal_margin"
            android:layout_marginBottom="@dimen/card_center_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advanced"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textStyle="bold" />
            <com.github.rubensousa.raiflatbutton.RaiflatButton
                android:id="@+id/btn_uninstall"
                android:textAllCaps="false"
                android:textColor="@color/blue_dark"
                android:layout_marginTop="@dimen/card_center_horizontal_margin"
                android:layout_marginLeft="@dimen/card_center_horizontal_margin"
                android:layout_marginRight="@dimen/card_center_horizontal_margin"
                android:gravity="left"
                android:background="@android:color/transparent"

                android:text="@string/uninstall"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/card_center_horizontal_margin"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
