<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:weightSum="4">
    <include layout="@layout/toolbar_with_title"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >
        <TextView
            android:id="@+id/txv_logo_sr"
            android:text="SCREEN ROCORDER"
            android:textSize="50sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_below="@+id/txv_logo_sr"
            android:id="@+id/txv_thongbao"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="..."
            android:textSize="@dimen/size_20sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_record_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible"
            app:cardBackgroundColor="#faf5f5"
            app:cardElevation="@dimen/cardview_default_elevation"
            android:descendantFocusability="blocksDescendants"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/card_center_horizontal_margin"
                >
                <android.support.v7.widget.CardView
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="#cced3120"
                    app:cardCornerRadius="27dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@drawable/ic_video_camera" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin1"
                    android:text="Start record"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_record_stop"
            android:descendantFocusability="blocksDescendants"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            app:cardBackgroundColor="#faf5f5"
            app:cardElevation="@dimen/cardview_default_elevation">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/card_center_horizontal_margin"
                android:weightSum="4">

                <android.support.v7.widget.CardView
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="#cced3120"
                    app:cardCornerRadius="27dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@drawable/ic_stop" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin1"
                    android:text="@string/stop_record"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_stored_video"
            android:descendantFocusability="blocksDescendants"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardBackgroundColor="#faf5f5"
            app:cardElevation="@dimen/cardview_default_elevation">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/card_center_horizontal_margin"
                android:weightSum="4">


                <android.support.v7.widget.CardView
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="#cca220ed"
                    app:cardCornerRadius="27dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@drawable/ic_stored_record" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin1"
                    android:text="@string/stored_video"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cv_settings"
            android:descendantFocusability="blocksDescendants"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardBackgroundColor="#faf5f5"
            app:cardElevation="@dimen/cardview_default_elevation">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/card_center_horizontal_margin"
                android:weightSum="4">


                <android.support.v7.widget.CardView
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="#cc24e17c"
                    app:cardCornerRadius="27dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@drawable/ic_setting_fix" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin1"
                    android:text="@string/settings"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

</LinearLayout>